--- a/index.html
+++ b/index.html
@@ -6,5 +6,36 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    
+    <div class="container">
+      <header>
+          <h1>
+             The beauty of colors
+          </h1>
+      </header>
+      <nav>
+          <ul>
+              <li><a href="jnodf">home</a></li>
+              <li><a href="jnodf">about</a></li>
+              <li><a href="jnodf">log</a></li>
+          </ul>
+      </nav>
+      <main class="big-card">
+          <div class="card">
+              <img src="download.jpg" alt="dw">
+              <h2>When colors enter the mind <br> and color everything.... </h2>
+          </div>
+          <div class="card">
+              <img src="download (1).jpg" alt="dw">
+              <h2>When we shine light on the colors <br>they become as beautiful </h2>
+          </div>
+          <div class="card">
+              <img src="download (2).jpg" alt="dw">
+              <h2>More colors </h2>
+          </div>
+      </main>
+      <footer>colors </footer>
+  </div>
+  </body>
 </html>
